samples/_failures_safe/1761408991_2e261a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c73680c0.c: In function ‘main’:
./samples/SAFE/__tmp_c73680c0.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
